[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = false
default-run = "default"

[features]
day1 = []
day2 = []

[[bin]]
name = "default"
path = "src/main.rs"

[[bin]]
name = "latest"
path = "src/main_latest.rs"

# [[bin]]
# name = "create"
# path = "src/main_create.rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
proc_macro_aoc = { path = "proc_macro_aoc" }
include_optional = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
either = "1.9.0"
regex = "1.10.2"
itertools = "0.12.0"
num = "0.4.1"
# 
[build-dependencies]
# clap = { version = "4.4.6", features = ["derive"] }
proc_macro_aoc = { path = "proc_macro_aoc" }
